--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
   # Triggers the workflow on pull request events but only for the "main" branch
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
@@ -25,14 +20,13 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout branch
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v4
       
       - name: Setup Python
-      - uses: actions/setup-python@v4
+        uses: actions/setup-python@v5 
         with:
-          python-version: '3.9'
+          python-version: 'pypy3.9' 
 
-      # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Ready to build branch!
 
