--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -35,4 +35,4 @@ jobs:
         run: pip3 install dbt-postgres
 
       - name: Deploy & Test Models (CI)
-        run: dbt build --profiles-dir . --target ci
+        run: dbt build --profiles-dir . --target dev
