--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5 
         with:
-          python-version: 'pypy3.9' 
+          python-version: '3.9' 
 
       - name: Run a one-line script
         run: echo Ready to build branch!
