--- a/.github/workflows/ci_checks.yml
+++ b/.github/workflows/ci_checks.yml
@@ -12,9 +12,20 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      DBT_USER: ${{secrets.DBT_USER}}
-      DBT_PASSWORD: ${{secrets.DBT_PASSWORD}}
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_DB: Traders
+          POSTGRES_USER: ammar
+          POSTGRES_PASSWORD: ammar
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U ammar"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,5 +45,15 @@ jobs:
       - name: Install dbt
         run: pip3 install dbt-postgres
 
+      - name: Wait for Postgres
+        run: |
+          until pg_isready -h 127.0.0.1 -p 5432; do
+            echo "Waiting for Postgres...";
+            sleep 3;
+          done
+
       - name: Deploy & Test Models (CI)
+        env:
+          DBT_USER: ammar
+          DBT_PASSWORD: ammar
         run: dbt build --profiles-dir . --target dev
