--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,28 @@ apache-airflow = "^2.10.0"
 apache-airflow-providers-postgres = "^5.11.3"
 dbt-postgres = "^1.8.2"
 pandas = "^2.2.2"
+sqlfluff = "^3.1.0"
+pre-commit = "^3.8.0"
+
+
+ [tool.sqlfluff.core]
+ templater = "jinja"
+ dialect = "postgres"
+ exclude_rules = "L031, L016, L034, AL04, AL05, AL06, CV02, CV03, CV04, RF05, RF06, ST01"
+ ignore = "templating"
+    
+ [tool.sqlfluff.indentation]
+ indented_joins = false
+ indented_using_on = false
+    
+ [tool.sqlfluff.rules]
+ tab_space_size = 2
+    
+ [tool.sqlfluff.rules.L010]
+ capitalisation_policy = "lower"
+    
+ [tool.sqlfluff.rules.L016]
+ max_line_length = 125
 
 
 [build-system]
