--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,3 +35,6 @@ models:
     staging:
       +materialized: view
       +schema: staging
+    vault:
+      +materialized: table
+      +schema: e_vault
