--- a/models/staging/stg_northwind__customers.yml
+++ b/models/staging/stg_northwind__customers.yml
@@ -4,7 +4,7 @@ models:
   - name: stg_northwind__customers
     config: 
       enabled: true
-      materialized: incremental
+      materialized: view
       tags:
         - Traders
         - customers      
