--- a/models/staging/stg_northwind__order_details.yml
+++ b/models/staging/stg_northwind__order_details.yml
@@ -4,7 +4,7 @@ models:
   - name: stg_northwind__order_details
     config: 
       enabled: true
-      materialized: incremental
+      materialized: view
       tags:
         - Traders
         - order_details      
