--- a/models/staging/stg_northwind__orders.yml
+++ b/models/staging/stg_northwind__orders.yml
@@ -4,7 +4,7 @@ models:
   - name: stg_northwind__orders
     config: 
       enabled: true
-      materialized: incremental
+      materialized: view
       tags:
         - Traders
         - orders      
