--- a/packages.yml
+++ b/packages.yml
@@ -5,3 +5,11 @@ packages:
 packages:
   - package: Datavault-UK/automate_dv
     version: 0.11.0
+
+packages:
+  - package: dbt-labs/codegen
+    version: 0.12.1
+
+packages:
+  - package: elementary-data/elementary
+    version: 0.15.2
