--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 apache-airflow = "^2.10.0"
 apache-airflow-providers-postgres = "^5.11.3"
+dbt-core = "^1.8.6"
 dbt-postgres = "^1.8.2"
 pandas = "^2.2.2"
 sqlfluff = "^3.1.0"
